--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,7 +19,7 @@
 .header-info {
     background: var(--color-onyx, #222526);
     border-bottom: 1px solid var(--color-graphite, #353A3E);
-    padding: 10px 0;
+    padding: 5px 0;
     width: 100%;
     display: block;
 }
